k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fantasy-characters
  labels:
    app: fantasy-characters-api
    environment: production
